# personalwebsite

./: Cargo.toml  Trunk.toml  index.html
src/: lib.rs  main.css  main.rs  router.rs  vercel.json
src/components/: mod.rs
src/components/cohort/: mod.rs  navigation_bar.rs  post.rs  social_media.rs
src/components/pages/: books.rs  home.rs  mod.rs  projects.rs
src/pages/: home.rs
webcompiled/: simulation.data  simulation.js
