[package]
name = "personalwebsite"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
serde = "1.0.216"
serde_json = "1.0.133"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"]}
yew = { version = "0.21.0", features = ["csr"] }
web-sys = {version = "*", features = [ "HtmlInputElement" ] }
yew-router = "0.18.0"
